tests/baselines/reference/unusedImports7.errors.txt
tests/cases/compiler/file2.ts(1,13): error TS6133: 'n' is declared but never used.


==== tests/cases/compiler/file1.ts (0 errors) ====
    export class Calculator {
        handleChar() {}
    }
    
    export function test() {
    
    }
    
    export default function test2() {
    
    }
    
==== tests/cases/compiler/file2.ts (1 errors) ====
    import * as n from "./file1"
                ~
!!! error TS6133: 'n' is declared but never used.
    
    